# PlaneFinder

./: CMakeLists.txt  Cluster.cpp  Cluster.h  MeanShift.cpp  MeanShift.h  PCA.cpp  PCA.h  Patch.cpp  Patch.h  Plane.cpp  Plane.h  RANSAC.cpp  RANSAC.h  planeFinder.cpp  playground.cpp
data/: noisyCube_0.1.ply  noisyCube_0.2.ply  noisyCube_0.5.ply  office.ply  officeCorner.ply
